# logseek

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
crates/logseek-app/: Cargo.toml  build.rs  icon.rc
crates/logseek-app/src/: main.rs
crates/logseek-core/: Cargo.toml
crates/logseek-core/src/: lib.rs
crates/logseek-core/src/cache/: index_cache.rs  mod.rs
crates/logseek-core/src/domain/: fingerprint.rs  mod.rs  types.rs
crates/logseek-core/src/parser/: csv.rs  jsonl.rs  mod.rs  text.rs  trait_def.rs
crates/logseek-core/src/query/: engine.rs  mod.rs
crates/logseek-core/src/session/: mod.rs  session.rs
crates/logseek-core/src/source/: backend.rs  index.rs  mod.rs
crates/logseek-core/src/utils/: helpers.rs  mod.rs
crates/logseek-core/src/watcher/: file_watcher.rs  mod.rs
crates/logseek-core/src/workspace/: mod.rs
crates/logseek-ui/: Cargo.toml
crates/logseek-ui/src/: lib.rs
crates/logseek-ui/src/app/: mod.rs  state.rs
crates/logseek-ui/src/panels/: font_settings.rs  mod.rs  search_results.rs  sources.rs  status_bar.rs  toolbar.rs  workspace.rs
crates/logseek-ui/src/theme/: colors.rs  fonts.rs  mod.rs
crates/logseek-ui/src/views/: log_view.rs  mod.rs  structured_view.rs
crates/logseek-ui/src/widgets/: mod.rs  tabs.rs
