[package]
name = "logseek-core"
version.workspace = true
edition.workspace = true

[dependencies]
memmap2.workspace = true
rayon.workspace = true
regex.workspace = true
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
memchr.workspace = true
dirs = "5.0"
encoding_rs = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
